[tool.poetry]
name = "expense"
version = "0.1.0"
description = ""
authors = ["Guten Ye <ywzhaifei@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.4"
plotly = "^5.18.0"
jupyterlab = "^4.0.10"
ipywidgets = "^8.1.1"
openpyxl = "^3.1.2"
seaborn = "^0.13.1"
statsmodels = "^0.14.1"
scikit-learn = "^1.3.2"
marimo = "^0.1.76"
polars = "^0.20.4"
pyarrow = "^14.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
